logs/validate.20260408-043417.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:716:40
    |
716 | ...                   }) by {
    |                          ^^

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:988:30
    |
988 |     impl std::fmt::Debug for DoubleHashFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:994:32
    |
994 |     impl std::fmt::Display for DoubleHashFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 22869MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
